--- a/rotors_obstacle_avoidance/CMakeLists.txt
+++ b/rotors_obstacle_avoidance/CMakeLists.txt
@@ -28,9 +28,9 @@ find_package(catkin REQUIRED COMPONENTS
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
    INCLUDE_DIRS include
-#  LIBRARIES rotors_obstacle_avoidance
+   LIBRARIES rotors_obstacle_avoidance
    CATKIN_DEPENDS geometry_msgs mav_msgs mavros mavros_msgs nav_msgs roscpp sensor_msgs
-#  DEPENDS system_lib
+   DEPENDS system_lib
 )
 
 ###########
@@ -40,14 +40,25 @@ catkin_package(
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
 include_directories(
-  include
+# include
   ${catkin_INCLUDE_DIRS}
 )
 
+add_library(rotors_obstacle_avoidance
+    src/offb_node.cpp
+)
+
+add_dependencies(rotors_obstacle_avoidance ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+
 ## Declare a C++ library
-# add_library(${PROJECT_NAME}
+# add_library(offb_node
 #   src/${PROJECT_NAME}/rotors_obstacle_avoidance.cpp
 # )
 
-add_executable(offb_node src/nodes/offb_node.cpp)
-add_dependencies(offb_node ${catkin_EXPORTED_TARGETS})
+add_executable(offb_node src/offb_node.cpp)
+# add_dependencies(offb_node ${catkin_EXPORTED_TARGETS})
+
+add_dependencies(offb_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+target_link_libraries(offb_node
+  ${catkin_LIBRARIES}
+)
