Add simple waypoints

--- a/rotors_gazebo/CMakeLists.txt
+++ b/rotors_gazebo/CMakeLists.txt
@@ -78,3 +78,7 @@ install(TARGETS waypoint_publisher waypoint_publisher_file hovering_example
   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
+
+find_package(octomap REQUIRED)
+include_directories(${OCTOMAP_INCLUDE_DIRS})
+link_libraries(${OCTOMAP_LIBRARIES})
