--- a/rotors_obstacle_avoidance/CMakeLists.txt
+++ b/rotors_obstacle_avoidance/CMakeLists.txt
@@ -26,11 +26,12 @@ find_package(catkin REQUIRED COMPONENTS
 ## LIBRARIES: libraries you create in this project that dependent projects also need
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
+
 catkin_package(
-   INCLUDE_DIRS include
-   LIBRARIES rotors_obstacle_avoidance
+#   INCLUDE_DIRS include
+#   LIBRARIES rotors_obstacle_avoidance
    CATKIN_DEPENDS geometry_msgs mav_msgs mavros mavros_msgs nav_msgs roscpp sensor_msgs
-   DEPENDS system_lib
+#   DEPENDS system_lib
 )
 
 ###########
