--- a/rotors_obstacle_avoidance/CMakeLists.txt
+++ b/rotors_obstacle_avoidance/CMakeLists.txt
@@ -63,3 +63,11 @@ add_dependencies(offb_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED
 target_link_libraries(offb_node
   ${catkin_LIBRARIES}
 )
+
+add_executable(offb_circle src/circle.cpp)
+# add_dependencies(offb_circle ${catkin_EXPORTED_TARGETS})
+
+add_dependencies(offb_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+target_link_libraries(offb_circle
+  ${catkin_LIBRARIES}
+)
