--- a/rotors_obstacle_avoidance/CMakeLists.txt
+++ b/rotors_obstacle_avoidance/CMakeLists.txt
@@ -8,6 +8,8 @@ project(rotors_obstacle_avoidance)
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also finid other catkin packages
 find_package(catkin REQUIRED COMPONENTS
+  cv_bridge
+  image_transport
   geometry_msgs
   mav_msgs
   mavros
@@ -16,7 +18,7 @@ find_package(catkin REQUIRED COMPONENTS
   roscpp
   sensor_msgs
 )
-
+find_package(OpenCV 3 REQUIRED)
 ###################################
 ## catkin specific configuration ##
 ###################################
@@ -30,7 +32,7 @@ find_package(catkin REQUIRED COMPONENTS
 catkin_package(
 #   INCLUDE_DIRS include
 #   LIBRARIES rotors_obstacle_avoidance
-   CATKIN_DEPENDS geometry_msgs mav_msgs mavros mavros_msgs nav_msgs roscpp sensor_msgs
+   CATKIN_DEPENDS geometry_msgs mav_msgs mavros mavros_msgs nav_msgs roscpp sensor_msgs opencv
 #   DEPENDS system_lib
 )
 
@@ -40,10 +42,8 @@ catkin_package(
 
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
-include_directories(
-# include
-  ${catkin_INCLUDE_DIRS}
-)
+include_directories(${catkin_INCLUDE_DIRS})
+include_directories(${OpenCV_INCLUDE_DIRS})
 
 add_library(rotors_obstacle_avoidance
     src/offb_node.cpp
@@ -55,11 +55,9 @@ add_dependencies(rotors_obstacle_avoidance ${${PROJECT_NAME}_EXPORTED_TARGETS} $
 # add_library(offb_node
 #   src/${PROJECT_NAME}/rotors_obstacle_avoidance.cpp
 # )
-
-add_executable(offb_node src/offb_node.cpp)
 # add_dependencies(offb_node ${catkin_EXPORTED_TARGETS})
+add_executable(offb_node src/offb_node.cpp)
 
 add_dependencies(offb_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-target_link_libraries(offb_node
-  ${catkin_LIBRARIES}
-)
+target_link_libraries(offb_node ${catkin_LIBRARIES})
+target_link_libraries(offb_node ${OpenCV_LIBRARIES})
