--- a/rotors_obstacle_avoidance/package.xml
+++ b/rotors_obstacle_avoidance/package.xml
@@ -56,6 +56,9 @@
   <build_depend>nav_msgs</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>sensor_msgs</build_depend>
+  <build_depend>cv_bridge</build_depend>
+  <build_depend>opencv</build_depend>
+
   <build_export_depend>geometry_msgs</build_export_depend>
   <build_export_depend>mav_msgs</build_export_depend>
   <build_export_depend>mavros</build_export_depend>
@@ -70,6 +73,9 @@
   <exec_depend>nav_msgs</exec_depend>
   <exec_depend>roscpp</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
+  <exec_depend>cv_bridge</exec_depend>
+  <exec_depend>opencv</exec_depend>
+
 
 
   <!-- The export tag contains other, unspecified, tags -->
