--- a/rotors_obstacle_avoidance/CMakeLists.txt
+++ b/rotors_obstacle_avoidance/CMakeLists.txt
@@ -67,3 +67,8 @@ add_executable(offb_node src/offb_node.cpp src/umap_util.cpp src/wp_planning.cpp
 add_dependencies(offb_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 target_link_libraries(offb_node ${catkin_LIBRARIES})
 target_link_libraries(offb_node ${OpenCV_LIBRARIES})
+
+add_executable(offb_circle src/offb_circle.cpp)
+add_dependencies(offb_circle ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+target_link_libraries(offb_circle ${catkin_LIBRARIES})
+
