Omit opencv related file

--- a/rotors_obstacle_avoidance/CMakeLists.txt
+++ b/rotors_obstacle_avoidance/CMakeLists.txt
@@ -65,9 +65,9 @@ add_dependencies(rotors_obstacle_avoidance ${${PROJECT_NAME}_EXPORTED_TARGETS} $
 # add_dependencies(offb_node ${catkin_EXPORTED_TARGETS})
 add_executable(offb_node src/offb_node.cpp src/umap_util.cpp src/wp_planning.cpp)
 
-add_dependencies(offb_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-target_link_libraries(offb_node ${catkin_LIBRARIES})
-target_link_libraries(offb_node ${OpenCV_LIBRARIES})
+#add_dependencies(offb_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+#target_link_libraries(offb_node ${catkin_LIBRARIES})
+#target_link_libraries(offb_node ${OpenCV_LIBRARIES})
 
 add_executable(offb_circle src/offb_circle.cpp)
 add_dependencies(offb_circle ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
