Modify some make file

--- a/rotors_obstacle_avoidance/CMakeLists.txt
+++ b/rotors_obstacle_avoidance/CMakeLists.txt
@@ -55,7 +55,7 @@ include_directories(${catkin_INCLUDE_DIRS})
 include_directories(${OpenCV_INCLUDE_DIRS})
 
 add_library(rotors_obstacle_avoidance
-    src/offb_circle.cpp
+    src/offb_node_onboard.cpp
 )
 
 add_dependencies(rotors_obstacle_avoidance ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
@@ -66,11 +66,10 @@ add_dependencies(rotors_obstacle_avoidance ${${PROJECT_NAME}_EXPORTED_TARGETS} $
 # )
 # add_dependencies(offb_node ${catkin_EXPORTED_TARGETS})
 
-add_executable(offb_node src/offb_node.cpp src/umap_util.cpp src/wp_planning.cpp)
-
-add_dependencies(offb_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-target_link_libraries(offb_node ${catkin_LIBRARIES})
-target_link_libraries(offb_node ${OpenCV_LIBRARIES})
+#add_executable(offb_node src/offb_node.cpp src/umap_util.cpp src/wp_planning.cpp)
+#add_dependencies(offb_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+#target_link_libraries(offb_node ${catkin_LIBRARIES})
+#target_link_libraries(offb_node ${OpenCV_LIBRARIES})
 
 add_executable(offb_circle src/offb_circle.cpp)
 add_dependencies(offb_circle ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
